--- a/orderlyflow/android/local.properties
+++ b/orderlyflow/android/local.properties
@@ -1,2 +1,2 @@
-sdk.dir=C:\\Users\\User\\AppData\\Local\\Android\\sdk
+sdk.dir=C:\\Users\\rayan\\AppData\\Local\\Android\\sdk
 flutter.sdk=C:\\src\\flutter
