--- a/orderlyflow/pubspec.yaml
+++ b/orderlyflow/pubspec.yaml
@@ -30,11 +30,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  mongo_dart: ^0.8.2
+  crypto: ^3.0.0
 
 dev_dependencies:
   flutter_test:
