ADD Notes function ISSUE margin and height are meh

--- a/orderlyflow/pubspec.yaml
+++ b/orderlyflow/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   glassmorphism: ^3.0.0
   table_calendar: ^3.0.9
   intl: ^0.18.0
+  indexed: ^0.0.8
 
 dev_dependencies:
   flutter_test:
