--- a/orderlyflow/pubspec.yaml
+++ b/orderlyflow/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
   flutter_spinkit: ^5.1.0
   loading_animation_widget: ^1.2.0+4
-  mongo_dart: ^0.8.2
+  mongo_dart: ^0.9.1
   crypto: ^3.0.0
   page_transition: ^2.0.9
   auto_size_text: ^3.0.0
@@ -41,6 +41,9 @@ dependencies:
   intl: ^0.18.0
   indexed: ^0.0.8
   get: ^4.6.5
+  flutter_sms: ^2.3.3
+  sms: ^0.2.4
+
 
 dev_dependencies:
   flutter_test:
