--- a/orderlyflow/pubspec.yaml
+++ b/orderlyflow/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   bson: ^4.0.0
   email_auth: ^1.0.0
   flutter_termii: ^0.2.1
+  mailer: ^6.0.0
+  http: ^0.13.5
 
 
 dev_dependencies:
