--- a/orderlyflow/pubspec.yaml
+++ b/orderlyflow/pubspec.yaml
@@ -47,7 +47,7 @@ dependencies:
   url_launcher: ^6.1.10
   open_file: ^3.2.1
   permission_handler: ^10.2.0
-  path_provider: ^2.0.13
+  path_provider: ^2.0.14
   flutter_downloader: ^1.10.2
   bson: ^4.0.0
   email_auth: ^1.0.0
@@ -56,6 +56,7 @@ dependencies:
   http: ^0.13.5
   dotted_line: ^3.1.0
   pull_to_refresh: ^2.0.0
+  downloads_path_provider_28: ^0.1.2
 
 
 
