--- a/orderlyflow/pubspec.yaml
+++ b/orderlyflow/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   indexed: ^0.0.8
   argon_buttons_flutter: ^1.1.0
   get: ^4.6.5
+  pie_chart: ^5.3.2
+  glass: ^1.0.1+1
 
 dev_dependencies:
   flutter_test:
